# netbox-ixc-sync

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
netbox_ixc_sync/: __init__.py  forms.py  ixc_api.py  models.py  navigation.py  sync.py  tables.py  urls.py  views.py
netbox_ixc_sync/migrations/: 0001_initial.py  0002_orphans.py
netbox_ixc_sync/templates/netbox_ixc_sync/: ixcconfig.html  synclog.html
